# idTechToolset

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  doc_template.xml  sign_key.asc
.github/workflows/: build.yaml  release.yaml
def/: CMakeLists.txt  def_dump.cpp
md5anim/: CMakeLists.txt  md5anim_to_gltf.cpp
md5mesh/: CMakeLists.txt  md5mesh_to_gltf.cpp
